--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <title>Math Adventure</title>
   <head>
     <link rel="manifest" href="/manifest.json" />
 <meta name="theme-color" content="#6366f1" />
